package MiddlewarePackage;
syntax = "proto3";

message PatternIdentifierMessage {
    string Description = 1;
}

message BroadcastMessage{
    string Description = 1;
    required string Command = 2;

}

message IdentifierMessage {
    string Description = 1;
    string Name = 2;
    string SensorType = 3;


}

message SensorMessage {
    string Description = 1;
    string Temperature = 2;
    string Pressure = 3;
    string Humidity = 4;
    

}

message EditSoundSystemMessage {
    string Description = 1;
    string ActualTrack = 2;
    string Volume = 3;
}

message FeedbackMessage {
    string Description = 1;
    string ActualTrack = 2;
    string Volume = 3;
}


message EditGateStatusMessage {
    string Description = 1;
    string Status = 2;
}

message GateStatusMessage {
    string Description = 1;
    string Status = 2;
}